@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-24T01:04:36Z",
-  "count_outdated" : 6801,
-  "uniques_outdated" : 2717,
-  "count" : 7096,
-  "uniques" : 2920,
+  "timestamp" : "2024-02-24T08:17:25Z",
+  "count_outdated" : 6803,
+  "uniques_outdated" : 2718,
+  "count" : 7097,
+  "uniques" : 2921,
   "clones" : [
-    {
-      "timestamp": "2024-02-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-11T00:00:00Z",
       "count": 4,
@@ -112,6 +103,15 @@
       "uniques": 17,
       "uniques_minmax": [ 1, 17 ],
       "uniques_decinc": [ 0, 17 ]
+    },
+    {
+      "timestamp": "2024-02-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
