@@ -1,12 +1,7 @@
 {
-  "count": 295,
+  "count": 294,
   "uniques": 167,
   "clones": [
-    {
-      "timestamp": "2024-02-10T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-11T00:00:00Z",
       "count": 4,
@@ -61,6 +56,11 @@
       "timestamp": "2024-02-23T00:00:00Z",
       "count": 25,
       "uniques": 17
+    },
+    {
+      "timestamp": "2024-02-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
